[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Game/UbintuItalic60.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Icons/Home.png" type="Texture" id=2]
[ext_resource path="res://Assets/SimpleShapes/SmoothEdgeTriangle.png" type="Texture" id=3]
[ext_resource path="res://Assets/SimpleShapes/Simple.png" type="Texture" id=4]
[ext_resource path="res://Scenes/GUI/LevelSelect/LevelSelect.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ -167.616 ]
}
guiPath = "res://Scenes/GUI/Main/GUI.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.603482, 0.35849, 0.391709, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1080.0
margin_bottom = 1920.0
rect_scale = Vector2( 0.995652, 1 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 1080.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 1080.0
margin_bottom = 230.0
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer"]
self_modulate = Color( 0.996078, 0.364706, 0.364706, 1 )
margin_right = 1080.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Control/VBoxContainer"]
margin_top = 200.0
margin_right = 1080.0
margin_bottom = 220.0
value = 60.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_top = 30.0
margin_bottom = 280.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 300.0
margin_right = 1080.0
margin_bottom = 1920.0
mouse_filter = 2
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1050.0
margin_bottom = 1590.0
rect_min_size = Vector2( 400, 400 )

[node name="Bg" type="TextureButton" parent="MarginContainer/Control"]
self_modulate = Color( 0.8, 0.239216, 0.313726, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -345.0
margin_top = -350.0
margin_right = 355.0
margin_bottom = 350.0
rect_min_size = Vector2( 400, 400 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg2" type="TextureButton" parent="MarginContainer/Control/Bg"]
self_modulate = Color( 0.6, 0.121569, 0.152941, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -325.0
margin_right = 325.0
margin_bottom = 325.0
rect_min_size = Vector2( 350, 350 )
mouse_filter = 2
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg3" type="TextureButton" parent="MarginContainer/Control/Bg/Bg2"]
self_modulate = Color( 0.14902, 0.0588235, 0.0509804, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 400 )
mouse_filter = 2
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="MarginContainer/Control/Bg/Bg2/Bg3"]
self_modulate = Color( 0.8, 0.239216, 0.313726, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_top = 70.0
margin_right = 241.0
margin_bottom = 170.0
rect_min_size = Vector2( 300, 100 )
rect_scale = Vector2( 0.98738, 1.00663 )
custom_fonts/font = ExtResource( 1 )
text = "INTERMEDIATE"
align = 1
valign = 1
uppercase = true

[node name="LevelPic" type="TextureButton" parent="MarginContainer/Control/Bg/Bg2/Bg3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1050.0
margin_bottom = 1590.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2

[node name="NextLevel" type="TextureButton" parent="MarginContainer/Control3"]
self_modulate = Color( 0.67451, 0.580392, 0.580392, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -100.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 200 )
rect_rotation = 90.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1050.0
margin_bottom = 1590.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2

[node name="PrevLevel" type="TextureButton" parent="MarginContainer/Control2"]
self_modulate = Color( 0.67451, 0.580392, 0.580392, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 100.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 200 )
rect_rotation = 270.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="MarginContainer/Control/Bg" to="." method="_on_Bg_pressed"]
[connection signal="pressed" from="MarginContainer/Control/Bg/Bg2" to="." method="_on_Bg_pressed"]
[connection signal="pressed" from="MarginContainer/Control/Bg/Bg2/Bg3" to="." method="_on_Bg_pressed"]
[connection signal="pressed" from="MarginContainer/Control/Bg/Bg2/Bg3/LevelPic" to="." method="_on_Bg_pressed"]
[connection signal="pressed" from="MarginContainer/Control3/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="MarginContainer/Control2/PrevLevel" to="." method="_on_PrevLevel_pressed"]
